--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,3 +23,52 @@ body{
     font-family: "RobotoRegular";
     src: url(./../assets/fonts/RobotoRegular.ttf);
 }
+
+header{
+    padding-top: 40px;
+    width: 100%;
+    height: max-content;
+    background-image: url(./../assets/img/banner-overlay-img.png);
+    background-size: cover;
+    display: flex;
+}
+
+header div{
+    width: 100%;
+    display: flex;
+}
+
+#logo{
+    width: 31%;
+    height: max-content;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+nav{
+    width: 69%;
+    display: flex;
+    align-items: center;
+}
+
+nav ul{
+    width: 100%;
+    padding-left: 150px;
+    list-style-type: none;
+    display: flex;
+    gap: 45px;
+    font-family: RobotoRegular;
+    color: white;
+    font-size: 15px;
+    align-items: center;
+}
+
+li button{
+    width: 140px;
+    height: 50px;
+    background-color: #0bd2ef;
+    border: none;
+    border-radius: 40px;
+    color: white;
+}
