--- a/public/css/style.css
+++ b/public/css/style.css
@@ -75,7 +75,7 @@ button{
     width: 140px;
     height: 50px;
     background-color: #0bd2ef;
-    border: none;
+    border: #0bd2ef 1px solid;
     border-radius: 40px;
     color: white;
 }
@@ -136,4 +136,9 @@ button{
 
 #contactDarkBlue{
     background-color: #2152a1;
+    border: 1px solid #2152a1;
+}
+
+button:hover, #contactDarkBlue:hover{
+    background-color: transparent;
 }
