Add of Partners Section

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,11 +24,13 @@ body{
     src: url(./../assets/fonts/RobotoRegular.ttf);
 }
 
+/* header section */
+
 header{
     padding-top: 40px;
     width: 100%;
     height: max-content;
-    background-color: darkblue;
+    background-color: #0a1650;
     background-image: url(./../assets/img/banner-overlay-img.png);
     background-size: cover ;
     display: flex;
@@ -240,4 +242,65 @@ button:hover, #contactDarkBlue:hover{
         width: 100px;
         height: 30px;
     }
+}
+
+/* partners section */
+
+#PARTNERS{
+    background-color: #0a1650;
+    width: 100%;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+#PartnersTop{
+    width: 100%;
+    height: max-content;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#PartnersTop p{
+    color: #4599c7;
+    font-family: RobotoRegular;
+    font-size: 15px;
+    margin-bottom: 13px;
+}
+
+#PartnersTop h1{
+    margin-top: 0px;
+    font-family:RobotoBold;
+    color: white;
+    font-size: 40px;
+    margin-bottom: 27px;
+}
+
+#PartnersBottom{
+    width: 90%;
+    height: max-content;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 27px;
+    margin-bottom: 100px;
+}
+
+.sliders{
+    background-color: #17256e;
+    width: 130px;
+    height: 120px;
+    border-radius: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+
+.sliders img{
+    width: 90px;
+    height: auto;
 }
