--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@ header{
     height: max-content;
     background-color: #0a1650;
     background-image: url(./../assets/img/banner-overlay-img.png);
-    background-size: cover ;
+    background-size: cover;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
@@ -301,6 +301,18 @@ button:hover, #contactDarkBlue:hover{
 }
 
 .sliders img{
-    width: 90px;
+    width: 80px;
     height: auto;
+}
+
+.sliders img:hover{
+    transition: 1s;
+    transition-timing-function: ease;
+    transform: translateY(-10px);
+    filter: brightness(100);
+}
+
+.sliders:hover{
+    background-color: #0bd2ef;
+
 }
