--- a/public/css/style.css
+++ b/public/css/style.css
@@ -33,6 +33,8 @@ header{
     background-color: #0a1650;
     background-image: url(./../assets/img/banner-overlay-img.png);
     background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
