--- a/public/css/stylebis.css
+++ b/public/css/stylebis.css
@@ -365,3 +365,17 @@ body{
 #read:hover{
     color: #00D2EE;
 }
+
+#section9{
+    margin-top: -14px;
+    background-color: #0B1650;
+    height: 790px;
+    width: 100%;
+}
+
+#section9-title{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
