Section 9 - button for the form

--- a/public/css/stylebis.css
+++ b/public/css/stylebis.css
@@ -431,3 +431,9 @@ input[placeholder="Phone"]{
 input[placeholder="Message"]{
     padding-left: 20px;
 }
+
+#message{
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
