--- a/public/css/stylebis.css
+++ b/public/css/stylebis.css
@@ -459,4 +459,23 @@ input[placeholder="Message"]{
     height: 640px;
     width: 100%;
     display: flex;
+    justify-content: center;
+}
+
+#footer-end{
+    display: flex;
+    align-items: flex-end;
+    flex-direction: row;
+    justify-content: center;
+    color: #5369AB;
+    font-family: RobotoRegular;
+    font-size: 15px;
+}
+
+#border-foot{
+    border-top: 2px solid #243171;
+    width: 100%;
+    position: absolute;
+    display: flex;
+    margin-top: 580px;
 }
