--- a/public/css/stylebis.css
+++ b/public/css/stylebis.css
@@ -472,35 +472,38 @@ input[placeholder="Message"]{
     width: 100%;
     display: flex;
     justify-content: center;
+    flex-direction: column;
+    flex-wrap: wrap;
 }
 
 #footer-end{
-    display: flex;
-    align-items: center;
-    flex-direction: row;
-    justify-content: center;
     color: #5369AB;
     font-family: RobotoRegular;
     font-size: 15px;
-    height: 70px;
-    position: relative; top: 570px; right: 710px;
+    display: flex;
+    justify-content: center;
+    position: relative; top: 145px;
+
+}
+
+#footer-end-p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #border-foot{
     border-top: 2px solid #243171;
     width: 100%;
     position: absolute;
-    display: flex;
-    margin-top: 565px;
+    margin-top: 135px;
 }
 
 #footer-start{
     display: flex;
     justify-content: center;
     gap: 80px;
-    padding-top: 130px;
-    padding-left: 330px
-
+    flex-wrap: wrap;
 }
 
 #logo-svg{
