--- a/public/css/stylebis.css
+++ b/public/css/stylebis.css
@@ -418,15 +418,32 @@ form{
 #first3-form{
     display: flex;
     gap: 25px;
+    flex-wrap: wrap;
 }
 
 #form-Name-bis{
     background-color: #0B1650;
     border: 2px solid #15245E;
     height: 100px;
-    width: 1002px;
+    width: 1020px;
     border-radius: 5px;
 }
+
+
+@media (max-width: 1024px){
+    #form-Name-bis{
+        background-color: #0B1650;
+        border: 2px solid #15245E;
+        height: 100px;
+        width: 320px;
+        margin-top: -20px;
+        margin-left: -45px;
+        border-radius: 5px;
+    }
+    
+    
+}
+
 
 input[placeholder="Name"]{
     padding-left: 20px;
